--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+
+header {
+    background-color : #9c0a07;
+
+}
+
+
+
+
 body {
     background-image: url("img-logo/background-flatter.png");
     background-repeat: no-repeat;
