--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("img-logo/background-flatter.png");
+    background-image: url("../img-logo/background-flatter.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
