--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
+    padding: 0;
+    margin: 0;
 }
 
 h1 {
@@ -31,4 +33,22 @@ p {
 
 .content {
     
+}
+.cinemaLateral{
+    width: 40%; 
+    height: 1500px; 
+    display: block;
+    margin-left: auto; 
+    margin-right: 0; 
+    object-fit: none;
+}
+
+.photoDeProfil{
+    border-radius: 50%;
+}
+
+.maps{
+    border:0; 
+    width:100%; 
+    height:100vh;
 }
