--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ p {
 
 .content {
     
+    
 }
 .cinemaLateral{
     width: 40%; 
@@ -50,6 +51,7 @@ p {
     margin-left: auto; 
     margin-right: 0; 
     object-fit: none;
+    
 }
 
 .photoDeProfil{
@@ -60,4 +62,11 @@ p {
     border:0; 
     width:100%; 
     height:100vh;
+}
+
+.rightText {
+    left: 42%;
+}
+.team {
+    display : flex;
 }
