--- a/css/puce.css
+++ b/css/puce.css
@@ -10,7 +10,9 @@ ul{
     display: block;
     position:relative;
     z-index:10;
-    margin-right: 10px ;
+    width: 40px;
+    height: 40px;
+    border: 5px solid white;
     
 
     
