--- a/css/buttonsServices.css
+++ b/css/buttonsServices.css
@@ -22,19 +22,20 @@
 
  p a:hover {
 	 background: rgba(0, 0, 0, 1);
-	 color: #e1332d;
+	 color: #FFF5D6;
 }
  .btn-2 {
-	 color: #fff;
+	 color: #FFF5D6;
 	 cursor: pointer;
-	 font-size: 20px;
-	 font-weight: 400;
-	 line-height: 45px;
+	 font-size: 100%;
+	 font-weight: 100%;
+	 line-height: 100%;
 	 margin: 0 0 2px;
-	 max-width: 250px;
+	 max-width: 150%;
 	 position: relative;
 	 text-decoration: none;
 	 text-transform: uppercase;
+	 height: 100%;
 	 width: 100%;
 }
  @media (min-width: 600px) {
