--- a/css/buttons.css
+++ b/css/buttons.css
@@ -19,7 +19,16 @@
 }
 .menu {
 	margin-left: 149px;
+	margin-top : 10px;
+	padding-right : 150px;
 
+}
+.men1 {
+	padding-right: 350px;
+}
+.men2 {
+	padding-left: 1100px;
+	margin-top : -60px;
 }
 
  p a:hover {
@@ -41,7 +50,7 @@
 }
  @media (min-width: 600px) {
 	 .btn {
-		 margin: 0 50px 2px;
+		 margin: 0 0px 2px;
 	}
 }
  .btn:hover {
