--- a/css/style.css
+++ b/css/style.css
@@ -104,3 +104,8 @@ span.blockservice{
     margin-left: 248px;
     background-color: black;
 }
+
+.arière2{
+    background-color: black;
+    margin: 10px;
+}
