proto puce noire

--- a/css/puce.css
+++ b/css/puce.css
@@ -15,6 +15,9 @@ ul {
 .puce.is-active {
     background: white;
 }
+.puce.is-black {
+    border: 5px solid black;
+}
 
 .puce1 {
     position: fixed;
