--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,8 @@ p {
 
 .photoDeProfil{
     border-radius: 100%;
-    width:33%;
+    width:55%;
+    ;
 }
 
 .maps{
@@ -80,6 +81,7 @@ p {
 
 .team {
     display : flex;
+    padding-right: 210px;
 }
 .logo{
     width:100%;
@@ -134,6 +136,8 @@ span.blockservice{
     margin-bottom: 50px
 }
 img {
-    
+    display: block;
+     margin-left: auto;
+     margin-right: auto;
     margin-bottom: 50px
 }
