--- a/css/buttonsServices.css
+++ b/css/buttonsServices.css
@@ -15,8 +15,8 @@
 	 border-radius: 25px;
 	 display: flex;
 	 flex-direction: column;
-	 height: 100%;
-	 width: 175px;
+	 height: 99%;
+	 width: 40%;
 	 text-align: center;
 	
 	 
