--- a/css/buttons.css
+++ b/css/buttons.css
@@ -57,15 +57,15 @@
 	 text-decoration: none;
 }
  .btn-1 {
-	 background: #e3403a;
-	 border: 1px solid #da251f;
-	 box-shadow: 0px 2px 0 #d6251f, 2px 4px 6px #e02a24;
+	 background: #810000;
+	 border: 1px solid #E2E1DF;
+	 box-shadow: 0px 2px 0 #fff, 2px 4px 6px #fff;
 	 font-weight: 900;
 	 letter-spacing: 1px;
 	 transition: all 150ms linear;
 }
  .btn-1:hover {
-	 background: #e02c26;
+	 background: #8F1100;
 	 border: 1px solid rgba(0, 0, 0, 0.05);
 	 box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.2);
 	 color: #ec817d;
