--- a/css/style.css
+++ b/css/style.css
@@ -81,33 +81,33 @@ p {
 
 .team {
     display : flex;
-    padding-right: 210px;
+    padding-right: 13.27%;
 }
 .logo{
     width:100%;
-    max-width:50px;
+    max-width:3.16%;
 }
 span.blockservice{
     display: flex;
     position: relative;
-    width: 155px;
+    width: 9.8%;
     height: 155px;
     background-color: #fff5d6; 
 }
 
 
 .container-cinema {
-    padding-left: 50px;
+    padding-left: 3.16%;
 }
 
 .distantuno {
-    margin-left: 149px;
+    margin-left: 9.41%;
     margin-top: 50px ;
     margin-bottom: 100px ;
     
 }
 .distantdos {
-    margin-left: 248px;
+    margin-left: 15.67%;
     margin-top: 50px ;
     margin-bottom: 25px ;
     
@@ -117,17 +117,17 @@ span.blockservice{
     color : black;
 }
 .arière1{
-    margin-left: 248px;
-    max-width: 281px ;
+    margin-left: 15.67%;
+    max-width: 17.75% ;
 }
 
 
 .minLink {
-    padding-left: 1100px;
+    padding-left: 69.49%;
 }
 
 .big {
-    margin-left: 149px;
+    margin-left: 9.41%;
     margin-top: 50px ;
     margin-bottom: 50px
 }
