puces noires et proto rideau

--- a/css/puce.css
+++ b/css/puce.css
@@ -15,8 +15,12 @@ ul {
 .puce.is-active {
     background: white;
 }
-.puce.is-black {
+.contpuces.is-black .puce {
     border: 5px solid black;
+}
+
+.contpuces.not-black .puce {
+    border: 5px solid white;
 }
 
 .puce1 {
