--- a/css/buttonsServices.css
+++ b/css/buttonsServices.css
@@ -59,6 +59,9 @@
 	 font-weight: 900;
 	 letter-spacing: 1px;
 	 transition: all 150ms linear;
+	 display: flex;
+    justify-content: center;
+    align-items: center;
 }
  .btn-3:hover {
 	border-radius: 25px;
@@ -69,4 +72,7 @@
 	 text-decoration: none;
 	 text-shadow: -1px -1px 0 #FFF5D6;
 	 transition: all 250ms linear;
+	 display: flex;
+    justify-content: center;
+    align-items: center;
 }
