--- a/css/buttonsServices.css
+++ b/css/buttonsServices.css
@@ -12,7 +12,7 @@
 }
 
  .buttons2 {
-	 border-radius: 25px;
+	border-radius: 25px;
 	 display: flex;
 	 flex-direction: column;
 	 height: 99%;
@@ -34,7 +34,7 @@
 	 font-size: 100%;
 	 font-weight: 100%;
 	 line-height: 100%;
-	 margin: 0 0 50	px;
+	 margin: 100	% 100% 100% ;
 	 max-width: 150%;
 	 position: relative;
 	 text-decoration: #000;
@@ -43,14 +43,14 @@
 	 height: 100%;
 	 width: 100%;
 }
- @media (min-width: 200px) {
+ @media (min-width: 12.63%) {
 	 .btn-2 {
-		 margin: 100px 50% 100px;
+		 margin: 6.32% 3.16% 6.32%;
 	}
 }
  .btn-2:hover {
 	 text-decoration: none;
-	 border-radius: 25px;
+	 border-radius: 1.58%;
 }
  .btn-3 {
 	border-radius: 25px;
