--- a/css/buttons.css
+++ b/css/buttons.css
@@ -18,16 +18,16 @@
 	 width: 85%;
 }
 .menu {
-	margin-left: 149px;
+	margin-left: 9.41%;
 	padding-top : 10px;
 	padding-right : 150px;
 
 }
 .men1 {
-	padding-right: 350px;
+	padding-right: 22.11%;
 }
 .men2 {
-	padding-left: 1100px;
+	padding-left: 69.49px;
 	margin-top : -60px;
 }
 
