--- a/css/chargement.css
+++ b/css/chargement.css
@@ -1,13 +1,12 @@
 #panels-container {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
   }
   
   .panel{
     position: fixed;
     top: 0;
     left: 0;
-    border-radius: 0 0 50% 0;
     transition: 1s;
     z-index: 12;
   }
@@ -17,7 +16,6 @@
   }
   
   .panel--right {
-    border-radius: 0 0 0 50%;
     right: 50%;
     transform: translateX(200%);
 
