--- a/css/style.css
+++ b/css/style.css
@@ -132,3 +132,14 @@ span.blockservice{
     margin-top: 50px ;
     margin-bottom: 50px
 }
+.tall {
+    margin-left: 9.41%;
+    margin-top: 50px ;
+    margin-bottom: 50px
+}
+.entitle {
+    height: 100vh; text-align: center;padding-top: 15%;
+}
+.sectitle {
+    height: 50vh; text-align: center; padding-top: 5%;
+}
