--- a/css/buttonsServices.css
+++ b/css/buttonsServices.css
@@ -60,7 +60,7 @@
 	border-radius: 25px;
 	 color: rgba(255, 255, 255, 0.2);
 	 border: 5px solid #000;
-	 font-weight: 900;
+	 font-weight: 1000px;
 	 letter-spacing: 1px;
 	 transition: all 150ms linear;
 	 display: flex;
