services stylé de ouf

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ span.blockservice{
 }
 
 
-.ariere1{
+.arière1{
     margin-left: 15.67%;
     max-width: 17.75% ;
 }
@@ -131,15 +131,4 @@ span.blockservice{
     margin-left: 9.41%;
     margin-top: 50px ;
     margin-bottom: 50px
-}
-.tall {
-    margin-left: 9.41%;
-    margin-top: 50px ;
-    margin-bottom: 50px
-}
-.entitle {
-    height: 100vh; text-align: center;padding-top: 15%;
-}
-.sectitle {
-    height: 50vh; text-align: center; padding-top: 5%;
 }
