--- a/css/puce.css
+++ b/css/puce.css
@@ -15,6 +15,9 @@ ul {
 .puce.is-active {
     background: white;
 }
+.puce.is-activeb {
+    background: black;
+}
 .contpuces.is-black .puce {
     border: 5px solid black;
 }
