--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ span.blockservice{
 
 .logo{
     max-width: 65%;
-    margin-top : -45px;
-    margin-bottom: 45px;
+    margin-top : -15%;
+    margin-bottom: 15%;
 }
 
