--- a/css/style.css
+++ b/css/style.css
@@ -25,21 +25,21 @@ body {
 }
 
 h1 {
-    font-family: Montserrat;
+    font-family: domine;
     font-size: 45px;
     color: #fff;
 
 }
 
 h2 {
-    font-family: Montserrat;
+    font-family: domine;
     font-size: 35px;
     
 
 }
 
 h3 {
-    font-family: Montserrat;
+    font-family: domine;
     font-size: 25px;
     
     margin-top: 50px;
