--- a/css/slick.css
+++ b/css/slick.css
@@ -8,9 +8,10 @@ html, body {
   }
 
   .slider {
-      width: 80%;
+      width: 70%;
       margin: 100px auto;
   }
+  
 
   .slider2 {
     width: 80%;
@@ -22,6 +23,9 @@ html, body {
   }
 
   .slick-slide img {
+    width: 90%;
+  }
+  .slick-slide img:hover {
     width: 100%;
   }
 
