--- a/css/index.css
+++ b/css/index.css
@@ -45,7 +45,7 @@ html, body {
 	width: 40%; 
 	height: 1500px; 
 	display: block;
-	margin-left: auto; 
+	margin-left: -30%; 
 	margin-right: 0; 
 	object-fit: none;
 }
@@ -54,8 +54,3 @@ html, body {
 	border-radius: 50%;
 }
 
-.maps{
-	border:0; 
-	width:100%; 
-	height:100vh;
-}
