--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     
 }
 #bar2 {
-
+    padding-top: 10px;
     background-color: #810000;
     
 }
@@ -70,15 +70,7 @@ p {
 
 }
 
-.cinemaLateral{
-    width: 40%; 
-    height: 1500px; 
-    display: block;
-    margin-left: auto; 
-    margin-right: 0; 
-    object-fit: none;
-    
-}
+
 
 .photoDeProfil{
     border-radius: 100%;
@@ -88,7 +80,7 @@ p {
 
 .maps{
     border:0; 
-    width:100%; 
+    width:91%; 
     height:100vh;
 }
 
@@ -210,6 +202,5 @@ span.blockservice{
 }
 
 .last-row{
-    
     margin-bottom: 30px;
 }
